--- a/LeaveManager.Api/assets/index.html
+++ b/LeaveManager.Api/assets/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width"/>
 	<link rel="stylesheet" href="styles/main.css">
 </head>
-<body ng-app="app">
+<body ng-app="app" class="container" >
 <nav class="navbar navbar-default" role="navigation">
 	<div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
@@ -42,7 +42,8 @@
 	<alert ng-repeat="n in notifications.messages" type="{{n.MessageType}}" close="notifications.messages.splice($index,1)">{{n.Content}}</alert>
 </div>
 
-<div ui-view></div>
+<div ui-view ></div>
+
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
