--- a/LeaveManager.Api/assets/index.html
+++ b/LeaveManager.Api/assets/index.html
@@ -70,8 +70,9 @@
 	<div ng-message="match">This password does not match the password entered before</div>
 	<div ng-message="max">This number exceeded the maximum allowed</div>
 	<div ng-message="min">This number is below the minimum</div>
-	<div ng-message="gt">This field should be greater than the first one</div>
+	<div ng-message="gte">This field should be greater or equal than the first one</div>
 	<div ng-message="lt">This field should be less than the first one</div>
+	<div ng-message="future">Have to select a future date</div>
 </script>
 </body>
 </html>
