--- a/LeaveManager.Api/assets/app/leaveInfo.html
+++ b/LeaveManager.Api/assets/app/leaveInfo.html
@@ -31,6 +31,13 @@
 			</div>
 		</div>
 		<div class="form-group">
+			<label>Duration</label>
+			<div>
+				<span ng-bind-template="{{leave.WorkingDays}} days"></span>
+			</div>
+		</div>
+
+		<div class="form-group">
 			<label>Status</label>
 			<div>
 				<span ng-bind="leave.Status"></span>
